--- a/sass/_layout/_slides.scss
+++ b/sass/_layout/_slides.scss
@@ -151,11 +151,26 @@
 
 @media (max-height: $readableheight), (max-width: $md) {
 	.content-wrap.bg-color-md {
-		padding: 30px 15px;
+		padding: 30px 30px;
 		background-color: rgba(255,255,255,0.9);
+		
+		&:before {
+			position: absolute;
+			border: 1px solid rgba(0,0,0,0.3);
+			left: 10px;
+			right: 10px;
+			top: 10px;
+			bottom: 10px;
+			content: "";
+		}
+		
 		
 		&.light-text {
 			background-color: rgba(0,0,0,0.7);
+			
+			&:before {
+				border: 1px solid  rgba(255,255,255,0.3);				
+			}
 		}
 		
 		
@@ -164,6 +179,10 @@
 			.fade-wrap {
 				background: rgba(0,0,0,0.6);
 				padding: 24px;
+			}
+			
+			&:before {
+				border: 1px solid  rgba(255,255,255,0.3);				
 			}
 		}
 	}
