--- a/assets/scss/_layout/_content.scss
+++ b/assets/scss/_layout/_content.scss
@@ -36,34 +36,41 @@ p {
 }
 
 @media (min-height: $minheight) and (min-width: $sm) {
+	
+	#timeline-intro {
+		.title {	
+			max-width: 675px;
+		}		
+	}
+	
 	h2 {
-		font-size: 36px;
-		line-height:36px;
+		font-size: 40px;
+		line-height:40px;
 		margin-bottom: 10px;
 		
 		max-width: $xllg;
 		
 		&.smaller {
-			font-size: 30px;
-			line-height: 35px;
+			font-size: 34px;
+			line-height: 34px;
 		}
 		
 		&.smallest {
-			font-size: 26px;
-			line-height: 32px;
+			font-size: 28px;
+			line-height: 28px;
 		}
 	}
 	h3 {
 		padding-left:40px;
 		font-size: 50px;
 		line-height: 50px;
-		
+		margin-bottom: -12px;
 	}
 	p {
 		padding-left: 70px;
-		max-width: 900px;
-		font-size: 14px;
-		line-height: 17px;
+		max-width: 70vw;
+		font-size: 15px;
+		line-height: 22px;
 		&.pad-0 {
 			padding: 0;
 		}
@@ -91,6 +98,14 @@ p {
 }
 
 @media (min-height: $medheight) and (min-width: $sm) {
+	
+	
+	#timeline-intro {
+		.title {	
+			max-width: 875px;
+		}		
+	}
+	
 	h2 {
 		font-size: 70px;
 		line-height: 60px;
